backend/deployments/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: underwoodsteam/dev-backend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              memory: "512Mi"
        # - name: detector
        #   image: underwoodsteam/dev-detector:latest
        #   ports:
        #     - containerPort: 9000
        #   env:
        #     - name: DB_HOST
        #       valueFrom:
        #         configMapKeyRef:
        #           name: backend-app-config
        #           key: DB_HOST
        #     - name: DB_USER
        #       valueFrom:
        #         secretKeyRef:
        #           name: mongo-auth
        #           key: MONGO_INITDB_ROOT_USERNAME
        #     - name: DB_PASSWORD
        #       valueFrom:
        #         secretKeyRef:
        #           name: mongo-auth
        #           key: MONGO_INITDB_ROOT_PASSWORD
          # resources:
          #   requests:
          #     cpu: "400m"
          #     memory: "256Mi"
          #   limits:
          #     memory: "4Gi"
